--- a/cfn-lmd.yml
+++ b/cfn-lmd.yml
@@ -59,7 +59,7 @@ Resources:
               print(event)
               return {
                   'statusCode': 200,
-                  'body': json.dumps('Hello CloudFront!')
+                  'body': json.dumps('Hello Pipeline!')
               }
 
       Description: !Ref Description
